<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_view_downloads">View Downloads</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_desc_glide">Glide - Image Loading Library by Bump Tech</string>
    <string name="download_desc_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="download_desc_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="ok">OK</string>
    <string name="guide_empty_url">Please select the file to download.</string>
    <string name="notification_name_downloads">Downloads</string>

</resources>
